syntax = "proto3";
package cache;

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/natenho/golang-examples/protobuf-anypb/proto/cache";

service Cacher {
  rpc Set (SetCacheRequest) returns (google.protobuf.Empty) {}
  rpc Get (GetCacheRequest) returns (GetCacheResponse) {}
}

message GetCacheRequest {
  string key = 1;
}

message SetCacheRequest {
  map<string, google.protobuf.Any> items = 1;
}

message GetCacheResponse {
  map<string, google.protobuf.Any> items = 1;
}
